syntax = "proto3";
package test;

message SetConfigRequest {
  string newConfig = 1;
}

message SetConfigResponse {
  string updatedConfig = 1;
}

service Test {
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
}